modified:   10. Recursion/Recursion vs Iteration.ipynb modified:   10. Recursion/The Anatomy of Recursion.ipynb

--- a/10. Recursion/The Anatomy of Recursion.ipynb
+++ b/10. Recursion/The Anatomy of Recursion.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -248,50 +248,25 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\"><pre>1134903170</pre></div><style>\r\n",
-       ".dni-code-hint {\r\n",
-       "    font-style: italic;\r\n",
-       "    overflow: hidden;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview {\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview td {\r\n",
-       "    vertical-align: top;\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "details.dni-treeview {\r\n",
-       "    padding-left: 1em;\r\n",
-       "}\r\n",
-       "table td {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "table tr { \r\n",
-       "    vertical-align: top; \r\n",
-       "    margin: 0em 0px;\r\n",
-       "}\r\n",
-       "table tr td pre \r\n",
-       "{ \r\n",
-       "    vertical-align: top !important; \r\n",
-       "    margin: 0em 0px !important;\r\n",
-       "} \r\n",
-       "table th {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "</style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to process Fibonacci(45) = 1134903170:\t00:00:05.9211833\r\n"
+     ]
     }
    ],
    "source": [
-    "// Not only does this size n take a reeeeally long time to compute (approx. 6 - 7 seconds), \n",
+    "DateTime BeforeFib = DateTime.Now;\n",
+    "\n",
+    "\n",
+    "// Not only does this size n take a reeeeally long time to compute (approx. 5 - 7 seconds), \n",
     "// each consecutive input larger than this will be exponentially slower!\n",
-    "Fibonacci( 45 )"
+    "long Fib45 = Fibonacci( 45 );\n",
+    "\n",
+    "\n",
+    "Console.WriteLine(\n",
+    "    $\"Time taken to process Fibonacci(45) = {Fib45}:\\t{ DateTime.Now - BeforeFib }\"\n",
+    ")"
    ]
   },
   {
