--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -3,7 +3,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "# 10. Recursion"
    ]
@@ -139,8 +146,8 @@
     "static decimal IterativeFactorial( int n )\n",
     "{\n",
     "\n",
-    "    // Allocate a decimal type Factorial Accumulator \n",
-    "    // which can accomodate larger-valued inputs without throwing errors \n",
+    "    // Allocate a Factorial Accumulator using the  decimal type, \n",
+    "    // which can accomodate certain larger-valued inputs without throwing errors \n",
     "    decimal FactorialAccumulator = 1;\n",
     "\n",
     "\n",
@@ -174,8 +181,72 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
