modified:   10. Recursion/Recursion vs Iteration.ipynb

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -123,7 +123,7 @@
     }
    },
    "source": [
-    "In this particular case, the implementation of the **iterative solution** is just as short and simple, but is also a bit more *efficient*:"
+    "In this particular case, the implementation of the **iterative solution** is just as short and simple, but **may** also be a bit more *efficient* as well:"
    ]
   },
   {
@@ -170,6 +170,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -179,7 +180,159 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, we clearly see that, in accounting for the difference between timestamps before and after each approach, the **Recursive** solution is actually a little more efficient in this case: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to process IterativeFactorial( 25 ) = 15511210043330985984000000:\n",
+      "00:00:00.0003432\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Assess the amount of time it takes to run the Iterative solution \n",
+    "\n",
+    "DateTime BeforeFact = DateTime.Now;\n",
+    "\n",
+    "decimal Fact25 = IterativeFactorial( 25 );\n",
+    "\n",
+    "Console.WriteLine(\n",
+    "    $\"Time to process IterativeFactorial( 25 ) = { Fact25 }:\\n{ DateTime.Now - BeforeFact }\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to process Recursivefactorial( 25 ) = 15511210043330985984000000:\n",
+      "00:00:00.0002110\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Assess the amount of time it takes to run the Recursive solution \n",
+    "\n",
+    "DateTime BeforeFact = DateTime.Now;\n",
+    "\n",
+    "decimal Fact25 = RecursiveFactorial( 25 );\n",
+    "\n",
+    "Console.WriteLine(\n",
+    "    $\"Time to process Recursivefactorial( 25 ) = { Fact25 }:\\n{ DateTime.Now - BeforeFact }\"\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Which is Better: Recursion or Iteration?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If the algorithm solving of the problem is **recursive**, the implementation of recursive solution can be much more *readable* and *elegant* than **iterative** solution to the same problem."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "    \n",
+    "While **recursion** is powerful programming technique, we have to think carefully before using it, because if used incorrectly, it can lead to inefficient and tough to understand and maintain solutions. \n",
+    "   \n",
+    "As such, If by using **recursion** we reach a simpler, shorter and easier for understanding solution, without causing inefficiency and other side effects, then we can prefer **recursive** solution. Otherwise, it is better to consider the **iterative** approach."
+   ]
   }
  ],
  "metadata": {
@@ -193,72 +346,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "name": "vscode"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
-     },
-     {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
-      "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": "Mermaid",
-      "name": "mermaid"
-     },
-     {
-      "aliases": [
-       "powershell"
-      ],
-      "languageName": "PowerShell",
-      "name": "pwsh"
-     },
-     {
-      "aliases": [],
-      "languageName": "SQL",
-      "name": "sql"
-     },
-     {
-      "aliases": [],
-      "name": "value"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
      }
     ]
    }
