modified:   10. Recursion/Recursion vs Iteration.ipynb

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -90,7 +90,8 @@
     }
    },
    "source": [
-    "The calculation of **factorial** is often given as an example when explaining the concept of **recursion**, but in this case, as in many others, **recursion is not the best approach**.\n",
+    "The calculation of **factorial** is often given as an example when explaining the concept of **recursion**.    \n",
+    "But, in many cases, **recursion is not the best approach**.\n",
     "   \n",
     "\n",
     "Very often, if we are given a **recurrent** definition of the problem, the **recurrent** solution, is often intuitive and thus leverages less conceptual difficulty, while an **iterative** (**consecutive**) solution often is significantly less obviuous. "
@@ -196,7 +197,7 @@
     }
    },
    "source": [
-    "Below, we clearly see that, in accounting for the difference between timestamps before and after each approach, the **Recursive** solution is actually a little more efficient in this case: "
+    "Below, we clearly see that, in accounting for the difference between timestamps before and after each approach, the **Recursive** solution is actually a little more efficient in *this case*: "
    ]
   },
   {
