modified:   10. Recursion/Recursion vs Iteration.ipynb new file:   10. Recursion/_img/RecursiveFibonacci.jpg

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -220,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "Time to process IterativeFactorial( 25 ) = 15511210043330985984000000:\n",
-      "00:00:00.0003432\r\n"
+      "00:00:00.0004000\r\n"
      ]
     }
    ],
@@ -271,7 +271,7 @@
      "output_type": "stream",
      "text": [
       "Time to process Recursivefactorial( 25 ) = 15511210043330985984000000:\n",
-      "00:00:00.0002110\r\n"
+      "00:00:00.0002507\r\n"
      ]
     }
    ],
@@ -285,6 +285,199 @@
     "Console.WriteLine(\n",
     "    $\"Time to process Recursivefactorial( 25 ) = { Fact25 }:\\n{ DateTime.Now - BeforeFact }\"\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Comparative Analysis: Fibonacci Numbers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Inefficient Recursion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let’s go back to the example with finding the $n^{th}\\,\\,Fibonacci\\,\\,number$ and look more carefully at the naive **recursive** solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static long RecursiveFibonacci( int n )\n",
+    "{\n",
+    "    if( n <= 2 )\n",
+    "        return 1;\n",
+    "\n",
+    "    else return RecursiveFibonacci( n - 1 ) + RecursiveFibonacci( n - 2 );\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The above solution is intuitive, short and easy to understand.   \n",
+    "At first sight, it seems that this is a great example for applying recursion.    \n",
+    "\n",
+    "The truth, however, is that this is one of the classical examples of **inappropriate usage of recursion**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to process RecursiveFibonacci( 45 ) = 1134903170:\t00:00:05.9656586\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "DateTime BeforeFib = DateTime.Now;\n",
+    "\n",
+    "\n",
+    "// Not only does this size n take a reeeeally long time to compute (approx. 5 - 7 seconds), \n",
+    "// each consecutive input larger than this will be exponentially slower!\n",
+    "long Fib45 = RecursiveFibonacci( 45 );\n",
+    "\n",
+    "\n",
+    "Console.WriteLine(\n",
+    "    $\"Time taken to process RecursiveFibonacci( 45 ) = { Fib45 }:\\t{ DateTime.Now - BeforeFib }\"\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If we set the value of $n$ = `100`, the calculations would take so much time that no one would wait to see the result.\n",
+    "      \n",
+    "The reason is that each recursive call leads to *two more calls*, and each of *those* calls causes *two more calls*, and so on.\n",
+    "That's why the tree of calls grows exponentially as shown on the figure below, where you can notice that `fib(2)` appears below **many** times on the Fibonacci tree:\n",
+    "\n",
+    "<img src=\"_img/RecursiveFibonacci.jpg\" style=\"display: block; margin: auto\"></img>\n",
+    "\n",
+    "The count of steps for computing of `fib(100)` is of the order of 1.6 *raised to the power 100* (this could be mathematically proven), whereas, if the solution is **linear**, the count of steps would be *only 100*.\n",
+    "The problem comes from the fact that there are a lot of excessive calculations."
    ]
   },
   {
