modified:   10. Recursion/Recursion vs Iteration.ipynb modified:   10. Recursion/The Anatomy of Recursion.ipynb

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -220,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "Time to process IterativeFactorial( 25 ) = 15511210043330985984000000:\n",
-      "00:00:00.0004000\r\n"
+      "00:00:00.0003758\r\n"
      ]
     }
    ],
@@ -271,7 +271,7 @@
      "output_type": "stream",
      "text": [
       "Time to process Recursivefactorial( 25 ) = 15511210043330985984000000:\n",
-      "00:00:00.0002507\r\n"
+      "00:00:00.0002927\r\n"
      ]
     }
    ],
@@ -363,12 +363,12 @@
    },
    "outputs": [],
    "source": [
-    "static long RecursiveFibonacci( int n )\n",
+    "static long InefficientRecursiveFibonacci( int n )\n",
     "{\n",
     "    if( n <= 2 )\n",
     "        return 1;\n",
     "\n",
-    "    else return RecursiveFibonacci( n - 1 ) + RecursiveFibonacci( n - 2 );\n",
+    "    else return InefficientRecursiveFibonacci( n - 1 ) + InefficientRecursiveFibonacci( n - 2 );\n",
     "}"
    ]
   },
@@ -424,19 +424,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to process RecursiveFibonacci( 45 ) = 1134903170:\t00:00:05.9656586\r\n"
+      "Time taken to process RecursiveFibonacci( 45 ) = 1134903170:\t00:00:06.1921370\r\n"
      ]
     }
    ],
    "source": [
+    "// Observe the current time Before the call to Fibonacci\n",
     "DateTime BeforeFib = DateTime.Now;\n",
     "\n",
     "\n",
     "// Not only does this size n take a reeeeally long time to compute (approx. 5 - 7 seconds), \n",
     "// each consecutive input larger than this will be exponentially slower!\n",
-    "long Fib45 = RecursiveFibonacci( 45 );\n",
+    "long Fib45 = InefficientRecursiveFibonacci( 45 );\n",
     "\n",
     "\n",
+    "// Print how long it took to execute the Inefficient Recursive Fibonacci solution \n",
     "Console.WriteLine(\n",
     "    $\"Time taken to process RecursiveFibonacci( 45 ) = { Fib45 }:\\t{ DateTime.Now - BeforeFib }\"\n",
     ")"
@@ -477,7 +479,432 @@
     "<img src=\"_img/RecursiveFibonacci.jpg\" style=\"display: block; margin: auto\"></img>\n",
     "\n",
     "The count of steps for computing of `fib(100)` is of the order of 1.6 *raised to the power 100* (this could be mathematically proven), whereas, if the solution is **linear**, the count of steps would be *only 100*.\n",
-    "The problem comes from the fact that there are a lot of excessive calculations."
+    "   \n",
+    "The problem comes from the fact that there are a lot of *excessive calculations*."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Efficient Recursion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We can **optimize the recursive method** for calculating the **Fibonacci** numbers by *remembering* (*saving*) the already calculated numbers in an `Array`, and making **recursive** calls only if the number we are trying to calculate has not been calculated yet. \n",
+    "   \n",
+    "Thanks to this small **optimization technique**, also known in computer science and dynamic optimization as **memoization**, the **recursive** solution would work for *linear* count of steps:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Suppose we have the following static instance of some input, `n`, declared at top-level scope."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static int n = 100;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "To implement the **Memoization**, we should declare an `Array` which will store each Previously Visited **Fibonnaci** result.\n",
+    "   \n",
+    "However, take care to include additional space for 2 elements, a \"*dummy front*\" and a \"*dummy end*\",   \n",
+    "which we will designate as **sentinel positions** to help signify the respective *beginning* and *end* of the **recursion**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static long[] PreviouslyVisited = new long[ n + 2 ];"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "By the **recursive** definition, that the **first two values** of the **Fibonacci** sequence are always `1` and `1`, consecutively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "PreviouslyVisited[1] = 1;\n",
+    "PreviouslyVisited[2] = 1;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe, finally, that the $0^{th}$ index is purposefully *skipped*, leaving it's value as `0` (given by default at initialization).   \n",
+    "This `0` value denotes a **sentinel value** which herein indicates the **bottom of the recursion**. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>6</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>7</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>8</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>9</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>10</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>11</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>12</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>13</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>14</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>15</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>16</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>17</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>18</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>19</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td colspan=\"2\"><i>(82 more)</i></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "PreviouslyVisited"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Having completed these steps, we may now revise the Inefficient Recursive Fibbonaci implementation to process each **Factorial** input **recursively**, but in **linear time**, rather than exponential time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static long EfficientRecursiveFibonacci( int n )\n",
+    "{\n",
+    "\n",
+    "    // If, recurring from the nth element of the Array of Previously Visited Fibonacci results,\n",
+    "    // we find that this nth element has reached the sentinel value of the array,\n",
+    "    // then we may presume that the result of this Fibonacci( n ) has NOT yet been added to the Array\n",
+    "    if( PreviouslyVisited[ n ] == 0 )\n",
+    "    {\n",
+    "\n",
+    "        // As such,\n",
+    "        // let this nth index of the Array of Previously Visited Fibonacci results \n",
+    "        // store the result of the recursive call to Fibonacci.\n",
+    "        PreviouslyVisited[ n ] = EfficientRecursiveFibonacci( n - 1 ) + EfficientRecursiveFibonacci( n - 2 );\n",
+    "\n",
+    "    }\n",
+    "    \n",
+    "    return PreviouslyVisited[ n ];\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, we see a staggering difference in the execution time after running the Efficient Recursive Fibonacci solution which clearly demonstrates a serious improvement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to process RecursiveFibonacci( 100 ) = 3736710778780434371:\t00:00:00.0000091\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Observe the current time Before the call to Fibonacci\n",
+    "DateTime BeforeFib = DateTime.Now;\n",
+    "\n",
+    "\n",
+    "// This version has an input that's twice as high, but still executes blazing fast! \n",
+    "long Fib100 = EfficientRecursiveFibonacci( 100 );\n",
+    "\n",
+    "\n",
+    "// Print how long it took to execute the Efficient Recursive Fibonacci solution \n",
+    "Console.WriteLine(\n",
+    "    $\"Time taken to process RecursiveFibonacci( 100 ) = { Fib100 }:\\t{ DateTime.Now - BeforeFib }\"\n",
+    ");"
    ]
   },
   {
