--- a/10. Recursion/The Anatomy of Recursion.ipynb
+++ b/10. Recursion/The Anatomy of Recursion.ipynb
@@ -256,16 +256,18 @@
     }
    ],
    "source": [
+    "// Observe the current time Before the call to Fibonacci\n",
     "DateTime BeforeFib = DateTime.Now;\n",
     "\n",
     "\n",
     "// Not only does this size n take a reeeeally long time to compute (approx. 5 - 7 seconds), \n",
     "// each consecutive input larger than this will be exponentially slower!\n",
-    "long Fib45 = Fibonacci( 45 );\n",
+    "long Fib45 = InefficientRecursiveFibonacci( 45 );\n",
     "\n",
     "\n",
+    "// Print how long it took to execute the Inefficient Recursive Fibonacci solution \n",
     "Console.WriteLine(\n",
-    "    $\"Time taken to process Fibonacci( 45 ) = { Fib45 }:\\t{ DateTime.Now - BeforeFib }\"\n",
+    "    $\"Time taken to process RecursiveFibonacci( 45 ) = { Fib45 }:\\t{ DateTime.Now - BeforeFib }\"\n",
     ")"
    ]
   },
